style: fix green modal, make header visible

--- a/src/n2-features/f2-modals/modal/GreenModal.module.css
+++ b/src/n2-features/f2-modals/modal/GreenModal.module.css
@@ -1,6 +1,6 @@
 .modalBackground {
     position: fixed;
-    top: 0;
+    top: 60px;
     left: 0;
     width: 100vw;
     height: 100vh;
